--- a/apigatewayapplication/src/main/resources/application.yml
+++ b/apigatewayapplication/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 server:
   port: 8082
+  address: 0.0.0.0
+
 
 spring:
   application:
-    name: api-gateway
+    name: apigatewayapplication
 
   cloud:
     gateway:
@@ -20,4 +22,5 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://192.168.1.100:8761/eureka/
+
