--- a/microservice-one/src/main/resources/application.yml
+++ b/microservice-one/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.1.100:8761/eureka/
