--- a/apigatewayapplication/src/main/resources/application.yml
+++ b/apigatewayapplication/src/main/resources/application.yml
@@ -22,5 +22,5 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.1.100:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
