--- a/jenkins-pipeline/Jenkinsfile
+++ b/jenkins-pipeline/Jenkinsfile
@@ -1,60 +1,82 @@
+
 pipeline {
     agent any
 
+    environment {
+        DOCKER_NETWORK = 'microservices-net'
+    }
+
     stages {
-        stage('Checkout') {
+        stage('Clean Workspace') {
             steps {
-                git branch: 'main', url: 'https://github.com/sakshivirhajobsearch/my-spring-boot-microservice-application.git'
+                cleanWs()
             }
         }
 
-        stage('Build All Services') {
+        stage('Checkout Code') {
             steps {
-                sh '''
-                cd service-registry && mvn clean package -DskipTests
-                cd ../api-gateway && mvn clean package -DskipTests
-                cd ../microservice-one && mvn clean package -DskipTests
-                cd ../microservice-two && mvn clean package -DskipTests
-                '''
-            }
-        }
-
-        stage('Test All Services') {
-            steps {
-                sh '''
-                cd service-registry && mvn test
-                cd ../api-gateway && mvn test
-                cd ../microservice-one && mvn test
-                cd ../microservice-two && mvn test
-                '''
-            }
-        }
-
-        stage('Deploy All Services') {
-            steps {
-                sh '''
-                # Function to kill processes on a port
-                function killPort() {
-                    PORT=$1
-                    PIDS=$(netstat -ano | findstr ":$PORT" | awk '{print $5}')
-                    for PID in $PIDS; do
-                        taskkill /PID $PID /F
-                    done
+                	git branch: 'main', url: 'https://github.com/sakshivirhajobsearch/my-spring-boot-microservice-application.git'
+                script {
+                    echo 'Assuming code is already present via Jenkins Git SCM checkout.'
                 }
-
-                killPort 8761
-                start "service-registry" cmd /c "java -jar service-registry/target/service-registry-*.jar"
-
-                killPort 8082
-                start "api-gateway" cmd /c "java -jar api-gateway/target/api-gateway-*.jar"
-
-                killPort 8083
-                start "microservice-one" cmd /c "java -jar microservice-one/target/microservice-one-*.jar"
-
-                killPort 8084
-                start "microservice-two" cmd /c "java -jar microservice-two/target/microservice-two-*.jar"
-                '''
             }
+        }
+
+        stage('Build All Modules') {
+            steps {
+                script {
+                    def services = ['service-registry', 'api-gateway', 'microservice-one', 'microservice-two']
+                    services.each { service ->
+                        dir(service) {
+                            bat 'mvn clean package -DskipTests'
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Build Docker Images') {
+            steps {
+                script {
+                    def services = ['service-registry', 'api-gateway', 'microservice-one', 'microservice-two']
+                    services.each { service ->
+                        dir(service) {
+                            def imageName = "${service}:latest"
+                            bat "docker build -t ${imageName} ."
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Create Docker Network') {
+            steps {
+                script {
+                    bat 'docker network inspect microservices-net || docker network create microservices-net'
+                }
+            }
+        }
+
+        stage('Start All Services with Docker Compose') {
+            steps {
+                bat 'docker-compose down || true'  // Stop any previous run (ignore errors if none exists)
+                bat 'docker-compose up --build -d'
+            }
+        }
+
+        stage('Post-Deployment Verification') {
+            steps {
+                bat 'docker ps'
+            }
+        }
+    }
+
+    post {
+        success {
+            echo 'All services deployed successfully.'
+        }
+        failure {
+            echo 'Pipeline failed. Check logs for details.'
         }
     }
 }
