--- a/jenkins-pipeline/Jenkinsfile
+++ b/jenkins-pipeline/Jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_NETWORK = 'microservices-net'
+        JAVA_HOME = 'C:\\Program Files\\Java\\jdk-17'  // Adjust to your installed JDK path
+        PATH = "${env.PATH};${JAVA_HOME}\\bin;C:\\apache-maven-3.9.6\\bin"  // Adjust to your Maven path
     }
 
     stages {
