--- a/service-registry/Jenkinsfile
+++ b/service-registry/Jenkinsfile
@@ -15,4 +15,42 @@ pipeline {
 
         stage('Build') {
             steps {
-                bat 'm
+                bat 'mvn clean package -DskipTests'
+            }
+        }
+
+        stage('Test') {
+            steps {
+                bat 'mvn test'
+            }
+        }
+
+        stage('Archive Artifact') {
+            steps {
+                archiveArtifacts artifacts: 'target/*.jar', fingerprint: true
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                deployService()
+            }
+        }
+    }
+
+    def deployService() {
+        powershell """
+            \$process = Get-NetTCPConnection -LocalPort $SERVICE_PORT -ErrorAction SilentlyContinue
+            if (\$process) {
+                \$pid = (Get-Process -Id \$process.OwningProcess).Id
+                Stop-Process -Id \$pid -Force
+                echo "Killed existing process on port $SERVICE_PORT"
+            } else {
+                echo "No process running on port $SERVICE_PORT"
+            }
+            
+            echo "Starting $SERVICE_NAME on port $SERVICE_PORT"
+            Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/${SERVICE_NAME}-*.jar"
+        """
+    }
+}
