--- a/jenkins-pipeline/Jenkinsfile
+++ b/jenkins-pipeline/Jenkinsfile
@@ -1,12 +1,9 @@
-
 pipeline {
     agent any
-
-    environment {
-        JAVA_HOME = 'C:\\Program Files\\Java\\jdk-17'  // Adjust to your installed JDK path
-        PATH = "${env.PATH};${JAVA_HOME}\\bin;C:\\apache-maven-3.9.6\\bin"  // Adjust to your Maven path
+    tools {
+        maven 'Maven'  // Make sure Maven is configured in Jenkins
+        jdk 'jdk-17'    // Ensure JDK is configured
     }
-
     stages {
         stage('Clean Workspace') {
             steps {
@@ -16,7 +13,7 @@ pipeline {
 
         stage('Checkout Code') {
             steps {
-                	git branch: 'main', url: 'https://github.com/sakshivirhajobsearch/my-spring-boot-microservice-application.git'
+                    git branch: 'main', url: 'https://github.com/sakshivirhajobsearch/my-spring-boot-microservice-application.git'
                 script {
                     echo 'Assuming code is already present via Jenkins Git SCM checkout.'
                 }
