--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8082
 spring.application.name=api-gateway
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+server.servlet.context-path=/service-registry
