--- a/microservice-two/pom.xml
+++ b/microservice-two/pom.xml
@@ -11,6 +11,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>microservice-two</artifactId>
+	<packaging>war</packaging>
 
 	<dependencies>
 		<dependency>
@@ -33,6 +34,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<layout>WAR</layout>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
