--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 spring.application.name=service-registry
+
+server.servlet.context-path=/service-registry
