--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,11 @@
 	<modules>
 		<module>service-registry</module>
 		<module>api-gateway-service</module>
+		<module>config-server</module>
 		<module>microservice-one-service</module>
 		<module>microservice-two-service</module>
+		<module>security-service</module>
+		<!--<module>logging-service</module>-->
 	</modules>
 
 	<dependencyManagement>
