--- a/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway-service/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port=9090
+
 spring.cloud.compatibility-verifier.enabled=false
+
+spring.application.name=api-gateway-service
+
+spring.cloud.gateway.routes[0].id=microservice-one
+spring.cloud.gateway.routes[0].uri=http://localhost:8082
+spring.cloud.gateway.routes[0].predicates[0]=Path=/microservice-one/**
+
+spring.cloud.gateway.routes[1].id=microservice-two
+spring.cloud.gateway.routes[1].uri=http://localhost:8083
+spring.cloud.gateway.routes[1].predicates[0]=Path=/microservice-two/**
+
+spring.cloud.gateway.routes[2].id=security-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8084
+spring.cloud.gateway.routes[2].predicates[0]=Path=/security/**
+
+spring.cloud.gateway.routes[3].id=logging-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8085
+spring.cloud.gateway.routes[3].predicates[0]=Path=/logging/**
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
