--- a/api-gateway-service/src/main/resources/application.yml
+++ b/api-gateway-service/src/main/resources/application.yml
@@ -1,15 +1,33 @@
 server:
-  port: 9000
+  port: 9090
 
 spring:
+  application:
+    name: api-gateway-service
+
   cloud:
     gateway:
       routes:
         - id: microservice-one
-          uri: lb://MICROSERVICE-ONE-SERVICE
+          uri: http://localhost:8082
           predicates:
-            - Path=/service-one/**
+            - Path=/microservice-one/**
         - id: microservice-two
-          uri: lb://MICROSERVICE-TWO-SERVICE
+          uri: http://localhost:8083
           predicates:
-            - Path=/service-two/**
+            - Path=/microservice-two/**
+        - id: security-service
+          uri: http://localhost:8084
+          predicates:
+            - Path=/security/**
+        - id: logging-service
+          uri: http://localhost:8085
+          predicates:
+            - Path=/logging/**
+    compatibility-verifier:
+      enabled: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
