--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.main.web-application-type=servlet
+server.port=8888
+
+spring.application.name=config-server
+
+spring.cloud.config.server.git.uri=https://github.com/sakshivirhajobsearch/my-spring-boot-microservice-application.git
+spring.cloud.config.server.git.clone-on-start=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 
