--- a/logging-service/src/main/resources/application.yml
+++ b/logging-service/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
-  port: 9004
+  port: 8085
+
+spring:
+  application:
+    name: logging-service
+  config:
+    import: optional:configserver:http://localhost:8888
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
