--- a/microservice-one-service/src/main/resources/application.properties
+++ b/microservice-one-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8082
+
+spring.application.name=microservice-one-service
+
 spring.cloud.compatibility-verifier.enabled=false
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
