--- a/microservice-one-service/src/main/resources/application.yml
+++ b/microservice-one-service/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 server:
-  port: 9001
+  port: 8082
 
 spring:
   application:
     name: microservice-one-service
+  config:
+    import: optional:configserver:http://localhost:8888
+  cloud:
+    compatibility-verifier:
+      enabled: false
+
 
 eureka:
   client:
