--- a/microservice-two-service/src/main/resources/application.yml
+++ b/microservice-two-service/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 server:
-  port: 9002
+  port: 8083
 
 spring:
   application:
     name: microservice-two-service
+  config:
+    import: optional:configserver:http://localhost:8888
+  cloud:
+    compatibility-verifier:
+      enabled: false
 
 eureka:
   client:
