--- a/service-registry/src/main/resources/application.yml
+++ b/service-registry/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
   port: 8761
+
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
 
 spring:
-  main:
-    allow-bean-definition-overriding: true
+  application:
+    name: service-registry
