--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.2</version>
+		</dependency>
+
 		<!-- (Other dependencies you might need based on your project) -->
 	</dependencies>
 
