--- a/security-service/src/main/resources/application.properties
+++ b/security-service/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=8084
-
-spring.application.name=security-service
-
-spring.config.import=optional:configserver:http://localhost:8888
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/security_service_db
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+jwt.secret=myjwtsecretkey
+jwt.expiration=3600000
+logging.level.root=INFO
