--- a/security-service/src/main/resources/application.yml
+++ b/security-service/src/main/resources/application.yml
@@ -2,12 +2,15 @@ server:
   port: 8084
 
 spring:
-  application:
-    name: security-service
-  config:
-    import: optional:configserver:http://localhost:8888
+  datasource:
+    url: jdbc:mysql://localhost:3306/security_service_db
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+jwt:
+  secret: mysecretkey
+  expiration: 3600000
