--- a/security-service/src/main/resources/application.properties
+++ b/security-service/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 server.port=8084
-spring.datasource.url=jdbc:mysql://localhost:3306/security_service_db
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-jwt.secret=myjwtsecretkey
-jwt.expiration=3600000
-logging.level.root=INFO
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
