--- a/microservice-one/pom.xml
+++ b/microservice-one/pom.xml
@@ -4,16 +4,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.example</groupId>
+		<artifactId>spring-boot-monolith</artifactId>
+		<version>1.0.0</version>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>my-spring-boot-microservice-application</artifactId>
+	<artifactId>microservice-one</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>my-spring-boot-microservice-application</name>
-	<description>Demo project for Spring Boot MicroService</description>
+	<name>microservice-one</name>
+	<description>microservice-one</description>
 	<url />
 	<licenses>
 		<license />
